--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "wahsandaruwan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.2",
